--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- DW6 -->
 <head>
 <!-- Copyright 2005 Macromedia, Inc. All rights reserved. -->
-<title>w e l c o m e</title>
+<title>s a r a h  s p a c e</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="mm_entertainment.css" type="text/css" />
 <style type="text/css">
@@ -37,9 +37,6 @@
   <tr>
     <td width="156" valign="top" height="370">
 	<table border="0" cellspacing="0" cellpadding="0" width="157" id="navigation">
-        <tr>
-          <td width="157" height="40"><a href="about.html">about me </a></td>
-        </tr>
         <tr>
           <td width="157" height="40"><a href="javascript:;">curriculum vitale </a></td>
         </tr>
@@ -90,7 +87,7 @@
 			<p><img src="mm_entertainment_image2.jpg" alt="image 2" width="110" height="110" border="0" vspace="6" /><br />
 			  <em>Walking Ghost </em>receives acclaim at the International Independent Film Festival of Mar del Plata <br />
               <a href="http://argentina.dollarbabyfilmfestival.com/">read more &gt;</a><a href="javascript:;"></a></p>
-			   <br />
+			  Â <br />
 			  &nbsp;<br />
 			  &nbsp;<br />
 		  &nbsp;<br />          </td>
