--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
   <tr>
     <td colspan="5" id="dateformat">&nbsp;<br />
-	&nbsp; &nbsp; <a href="home.html">home</a><br />	</td>
+	&nbsp; &nbsp; <a href="index.html">home</a><br />	</td>
   </tr>
   <tr>
     <td width="400" valign="top">&nbsp;</td>
