--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
 
    <tr>
     <td colspan="6" id="dateformat">&nbsp;<br />
-	&nbsp; &nbsp; <a href="home.html">home</a><br />	</td>
+	&nbsp; &nbsp; <a href="index.html">home</a><br />	</td>
   </tr>
   <tr>
     <td width="313" valign="top"><blockquote>
