--- a/tech.html
+++ b/tech.html
@@ -3,7 +3,7 @@
 <!-- DW6 -->
 <head>
 <!-- Copyright 2005 Macromedia, Inc. All rights reserved. -->
-<title>s k i l l z</title>
+<title>s k i l l s</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="mm_entertainment.css" type="text/css" />
 <style type="text/css">
@@ -66,7 +66,7 @@
             Adobe Audition <br />
             Adobe Photoshop <br />
             Adobe After Effects <br />
-            Adobe Dreamweaver (Obviously) </p>
+            Adobe Dreamweaver </p>
             <p><strong>Cameras</strong><br />
             Sony VX Series<br />
             Canon XL Series<br />
