--- a/tech.html
+++ b/tech.html
@@ -91,8 +91,10 @@ Chyron Character Generator<br />
 Technical Television (Camera  Control Unit: Sync, Pedestal, Vectorscope and waveform adjustments)</p>
 	      <p><strong>Others<br />
           </strong>Java Programming<br />
+          C++<br />
+          VHDL <br />
 BASIC<br />
-Assembly and Machine Language<br />
+HC 12 Assembly and Machine Language<br />
 HTML<br />
 Microsoft Office </p></td>
         </tr>
