--- a/tech.html
+++ b/tech.html
@@ -96,7 +96,7 @@ Technical Television (Camera  Control Unit: Sync, Pedestal, Vectorscope and wave
 BASIC<br />
 HC 12 Assembly and Machine Language<br />
 HTML<br />
-Microsoft Office </p></td>
+Linux </p></td>
         </tr>
       </table></td>
     <td width="400">&nbsp;</td>
