--- a/tech.html
+++ b/tech.html
@@ -92,6 +92,7 @@ Technical Television (Camera  Control Unit: Sync, Pedestal, Vectorscope and wave
 	      <p><strong>Others<br />
           </strong>Java Programming<br />
           C++<br />
+          LaTeX<br />
           VHDL <br />
 BASIC<br />
 HC 12 Assembly and Machine Language<br />
