--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </tr>
         <tr>
           <td class="bodyText"><p>Sarah Sterchele is an aspiring filmmaker AND student of the Computing Sciences currently living in Vancouver, British Columbia. A graduate of Eastern Michigan University and current student at Simon Fraser University, she graduated summa cum laude, at the top of her class, with highest distinction, and $15k in debt. An American citizen, she expatriated from her homeland to Canada and is biding her time until the next big project comes along.</p>
-            <p>Sarah is not <em>just</em> an amateur indie filmmaker with imdb.com credits- she has also worked in the big leagues with ESPN Network, is a freelance video producer, and has had a short16mm film screened at the International Independent Film Festival of Mar del Plata, Argentina. She's also put in her time as a production assistant and other labo(u)r intensive jobs. </p>
+            <p>Sarah is not <em>just</em> an amateur indie filmmaker with imdb.com credits- she has also worked in the big leagues with ESPN Network, is a freelance video producer, and has had a short16mm film screened at the International Independent Film Festival of Mar del Plata, Argentina. She's also put in her time as a production assistant and other labour intensive jobs. </p>
             <p>Please look around my Web site for more information on  the films and tv shows I have worked on, as well my other relevant experience and skills.</p>
             <p>&nbsp;</p>            </td>
         </tr>
