--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
               <a href="http://watersquatters.blogspot.com">read more &gt;</a><a href="javascript:;"></a></p>
 
 			<p><img src="mm_entertainment_image2.jpg" alt="image 2" width="110" height="110" border="0" vspace="6" /><br />
-			  <em>Walking Ghost </em>receives acclaim at the International Independent Film Festival of Mar del Plata <br />
-              <a href="http://argentina.dollarbabyfilmfestival.com/">read more &gt;</a><a href="javascript:;"></a></p>
+			  <em>Walking Ghost </em>receives acclaim at the Dollar Baby Festival Spain <br />
+              <a href="http://dollarbabyspain.com/programacion-y-horarios-del-festival/">read more &gt;</a><a href="javascript:;"></a></p>
 			   <br />
 			  &nbsp;<br />
 			  &nbsp;<br />
