--- a/edit.html
+++ b/edit.html
@@ -48,57 +48,35 @@
             <hr /></td>
         </tr>
         <tr>
-          <td height="100" colspan="7" class="style4"><p>Click on an image to see a segment of a short film or video I have edited. </p>
+          <td height="100" colspan="7" class="style4"><p>Click on an image to see a segment of my editing. </p>
             <p>Note: The quality of the videos will be degraded due to the clips being uploaded onto Youtube.com. Please also note that the acting, sound, or video quality of these clips may be poor, but  are selected based on editing content rather than on aesthetics. </p>
             <hr /></td>
         </tr>
 		<tr>
-          <td width="22%" height="110"><a href="http://www.youtube.com/watch?v=SkxSbCqSWj4"><img src="2.jpg" alt="small product photo" width="130" height="97" border="1" /></a></td>
+          <td width="22%" height="110"><a href="http://youtu.be/_y51BpMSjM0"><img src="2.jpg" alt="small product photo" width="130" height="97" border="1" /></a></td>
 		  <td>&nbsp;</td>
-		  <td width="22%" height="110"><a href="http://www.youtube.com/watch?v=DK682vGCeVQ"><img src="3.jpg" alt="small product photo" width="130" height="97" border="1" /></a></td>
+		  <td width="22%" height="110"><a href="http://youtu.be/3iRrtvCU8lk"><img src="3.jpg" alt="small product photo" width="130" height="97" border="1" /></a></td>
 		  <td>&nbsp;</td>
-		  <td width="22%" height="110"><a href="http://www.youtube.com/watch?v=pc5KXZ5vM0Q"><img src="8.jpg" alt="small product photo" width="130" height="97" border="1" /></a></td>
+		  <td width="22%" height="110"><a href="http://youtu.be/DuwK5Xq4oXU"><img src="8.jpg" alt="small product photo" width="130" height="97" border="1" /></a></td>
 		  <td>&nbsp;</td>
-		  <td width="22%" height="110"><a href="http://www.youtube.com/watch?v=ce44Pj5AIgg"><img src="5.jpg" alt="small product photo" width="130" height="97" border="1" /></a></td>
-        </tr>
+		 </tr>
 		<tr>
-          <td class="detailText" valign="top" nowrap="nowrap"><a href="http://www.youtube.com/watch?v=SkxSbCqSWj4">Clones</a><br />
-		  TRT: 2:23</td>
+          <td class="detailText" valign="top" nowrap="nowrap"><a href="http://youtu.be/_y51BpMSjM0">Clones</a><br />
+		 </td>
 		  <td>&nbsp;</td>
-		   <td class="detailText" valign="top" nowrap="nowrap"><a href="http://www.youtube.com/watch?v=DK682vGCeVQ">Color Correction </a><br />
-		  TRT: 1:29</td>
+		   <td class="detailText" valign="top" nowrap="nowrap"><a href="http://youtu.be/3iRrtvCU8lk">Color Correction </a><br />
+		 </td>
 		   <td>&nbsp;</td>
-		   <td class="detailText" valign="top" nowrap="nowrap"><a href="http://www.youtube.com/watch?v=pc5KXZ5vM0Q">Green Screen </a><br />
-		  TRT: 0:35 </td>
+		   <td class="detailText" valign="top" nowrap="nowrap"><a href="http://youtu.be/DuwK5Xq4oXU">Motion </a><br />
+		  </td>
 		   <td>&nbsp;</td>
-		   <td class="detailText" valign="top" nowrap="nowrap"><a href="http://www.youtube.com/watch?v=ce44Pj5AIgg">Fun with Keyframes </a><br />
-		  TRT: 1:21</td>
+		   
         </tr>
 		<tr>
 			<td colspan="7">&nbsp;</td>
 		</tr>
 
-		<tr>
-          <td height="110" bordercolor="0"><a href="http://www.youtube.com/watch?v=xXeelGFgAyU"><img src="7.jpg" alt="small product photo" width="130" height="97" border="1" /></a></td>
-		  <td bordercolor="0">&nbsp;</td>
-		  <td height="110" bordercolor="0"><a href="http://www.youtube.com/watch?v=5iWFPsRjcl0"><img src="4.jpg" alt="small product photo" width="130" height="97" border="1" /></a></td>
-		  <td bordercolor="0">&nbsp;</td>
-		  <td height="110" bordercolor="0">&nbsp;</td>
-		  <td bordercolor="0">&nbsp;</td>
-		  <td height="110" bordercolor="0">&nbsp;</td>
-        </tr>
-		<tr>
-          <td valign="top" nowrap="nowrap" bordercolor="0" class="detailText"><a href="http://www.youtube.com/watch?v=xXeelGFgAyU">            16mm Editing
-</a><br />
-		  TRT: 5:31 </td>
-		  <td bordercolor="0">&nbsp;</td>
-		   <td valign="top" nowrap="nowrap" bordercolor="0" class="detailText"><a href="http://www.youtube.com/watch?v=5iWFPsRjcl0">Tarintino and Drugs </a><br />
-TRT: 3:09</td>
-		 <td bordercolor="0">&nbsp;</td>
-		   <td valign="top" nowrap="nowrap" bordercolor="0" class="detailText">&nbsp;</td>
-		   <td bordercolor="0">&nbsp;</td>
-		   <td valign="top" nowrap="nowrap" bordercolor="0" class="detailText"><p>&nbsp;</p>	      </td>
-        </tr>
+	
 
 		<tr>
 			<td colspan="7">&nbsp;</td>
